--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
